...
"common.back" = "Back";
"common.cancel" = "Cancel";
"common.continue" = "Continue";
"common.copied" = "Copied";
"common.copy" = "Copy";
"common.delete" = "Delete";
"common.done" = "Done";
"common.goBack" = "Go Back";
"common.loading" = "loading…";
"common.next" = "Next";
"common.ok" = "OK";
"common.save" = "Save";
"details.advancedSubtitle" = "View current transaction breakdown";
...
"send.youWillPay" = "You'll pay";
"settings.appearance" = "Appearance";
"settings.currency" = "Currency";
"settings.general" = "General";
"settings.network" = "Network";
"settings.node" = "Node";
"settings.title" = "Settings";
"sort.amount" = "Amount";
"sort.change" = "Change";
"sort.date" = "Date";
"sort.name" = "Name";
"transaction.blockNumber" = "Block Number";
"transaction.confirmations" = "Confirmations";
...
